# magic-parser

./: Lexer.hs  Normalizer.hs  Parsers.hs  README.md  Structures.hs  Structures2.hs  Tests.hs  magic-parser.cabal  parser-generater.py
