name: magic-parser
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
maintainer: wilsonhardrock@gmail.com
synopsis: Parser for card from the trading card game Magic: The Gathering
author: Daniel Wilson
data-dir: ""
 
library
    build-depends: base -any, parsec -any, pcre-light -any,
                   QuickCheck -any
    exposed-modules: Parsers
    exposed: False
    buildable: True
    other-modules: Tests Structures Lexers Normalizer
 
